--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ cyclic_poly = []
 
 [dependencies]
 num-traits = "0.2.*"
+miniunchecked = { path = "../miniunchecked" }
 
 [dev-dependencies]
 adler32 = "1.2.*"
