--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 default = []
 adler = []
 cyclic_poly = []
+rsync = []
 
 [dependencies]
 miniunchecked = { path = "../miniunchecked" }
